Prevent validation message from overlapping form name

--- a/TietoFeedbackTool/TietoFeedbackTool/ClientApp/src/app/new-page/new-page.component.scss
+++ b/TietoFeedbackTool/TietoFeedbackTool/ClientApp/src/app/new-page/new-page.component.scss
@@ -65,7 +65,7 @@
     }
   }
   & div.nameinput-wrapper {
-    padding-top: 1.5rem;
+    padding-top: 1.7rem;
     & .name-input {
       resize: none;
       overflow: hidden;
